2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/db.c: (db_foreach):
	* src/CoverDatabase.cs:
	* src/SongDatabase.cs:

	More optimization and thread fixage.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Add some Thread.Sleep stuff to make the thread eat the CPU a little
	less vigorously.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c: (player_open), (player_stop):
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Fix some stop madness.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Show window as soon as possible.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Don't remove album covers when albums from removable media are
	removed.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/AddAlbumWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Muine.cs:
	* src/SongDatabase.cs:

	Read album covers in a thread on startup. This greatly improves
	startup speed.

2004-04-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/SkipToWindow.cs:

	Defer initialization of dialogs till when they are requested.

2004-04-14  Artur Flinta  <aflinta@cvs.gnome.org>

        * configure.in:
	    Added "pl" to ALL_LINGUAS.

2004-04-13  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	More constructor fixage.

2004-04-13  Kenneth Christiansen  <kenneth@gnu.org>
	    Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/ColoredCellRendererPixbuf.cs:
	* src/HandleView.cs:
	* src/InfoWindow.cs:
	* src/Makefile.am:
	* src/MmKeys.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs:
	* src/VolumeButton.cs:

	Pass IntPtr.Zero to the base constructors when we want dummy objects
	filled in with unmanaged gobjects.

	Use pkg-config files from Gtk# CVS.
	
2004-04-12  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Add "da" to ALL_LINGUAS.
